# boltffi

./: .gitignore  BOLTFFI_TOML_SPEC.md  Cargo.toml  README.md  cbindgen.toml  justfile  plan.md
benchmarks/rust-uniffi/: Cargo.toml  build-java.sh
benchmarks/rust-uniffi/src/: lib.rs
boltffi/: Cargo.toml
boltffi/src/: lib.rs
boltffi_bindgen/: Cargo.toml  askama.toml
boltffi_bindgen/src/: lib.rs
boltffi_bindgen/src/ir/: abi.rs  build.rs  codec.rs  contract.rs  definitions.rs  lower.rs  plan.rs  transport.rs  types.rs
boltffi_bindgen/src/ir/lower/: abi.rs  calls.rs  codec.rs  mod.rs  ops.rs
boltffi_bindgen/src/model/: module.rs  record.rs
boltffi_bindgen/src/render/: mod.rs
boltffi_bindgen/src/render/c/: emit.rs  lower.rs
boltffi_bindgen/src/render/csharp/: emit.rs  lower.rs  mappings.rs  mod.rs  names.rs  plan.rs  templates.rs
boltffi_bindgen/src/render/csharp/ast/: argument_list.rs  attribute.rs  code.rs  enum_underlying_type.rs  identifier.rs  mod.rs  parameter_list.rs  type_shape.rs
boltffi_bindgen/src/render/csharp/lower/: abi.rs  admission.rs  classes.rs  decode.rs  encode.rs  enumerations.rs  functions.rs  lowerer.rs  mod.rs  predicates.rs  prefix.rs  records.rs  size.rs  test_support.rs  types.rs  value.rs  wire_writers.rs
boltffi_bindgen/src/render/csharp/plan/: class.rs  enumeration.rs  field.rs  identifier.rs  mod.rs  module.rs  record.rs  stream.rs
boltffi_bindgen/src/render/csharp/snapshots/: boltffi_bindgen__render__csharp__templates__tests__snapshot_async_functions_task_overloads_and_return_shapes.snap  boltffi_bindgen__render__csharp__templates__tests__snapshot_data_enum_shape.snap  (+11 more)
boltffi_bindgen/src/render/dart/: emit.rs  lower.rs  mod.rs  names.rs  plan.rs  templates.rs
boltffi_bindgen/src/render/java/: emit.rs  lower.rs  mappings.rs  mod.rs  names.rs  plan.rs  templates.rs
boltffi_bindgen/src/render/jni/: lower.rs  mod.rs  plan.rs
boltffi_bindgen/src/render/kotlin/: emit.rs  lower.rs  mod.rs  plan.rs  templates.rs
boltffi_bindgen/src/render/python/: emit.rs  error.rs  lower.rs  mod.rs  naming.rs  plan.rs  templates.rs
boltffi_bindgen/src/render/swift/: emit.rs  lower.rs  plan.rs  templates.rs
boltffi_bindgen/src/render/typescript/: emit.rs  lower.rs  plan.rs  templates.rs
boltffi_bindgen/src/scan/: mod.rs
boltffi_binding/: Cargo.toml
boltffi_binding/src/: lib.rs
boltffi_binding/src/ir/: callable.rs  contract.rs  decl.rs  error.rs  ids.rs  metadata.rs  mod.rs  primitive.rs  surface.rs  symbol.rs  types.rs
boltffi_binding/src/lower/: codecs.rs  enums.rs  error.rs  ids.rs  index.rs  layout.rs  metadata.rs  methods.rs  mod.rs  names.rs  primitive.rs  records.rs  surface.rs  symbol.rs  types.rs
boltffi_binding/src/lower/callable/: mod.rs  params.rs  returns.rs
boltffi_cli/: Cargo.toml
boltffi_cli/src/: build.rs  check.rs  config.rs  desktop.rs  error.rs  main.rs  target.rs
boltffi_cli/src/cargo/: args.rs  config.rs  fixture.rs  metadata.rs  mod.rs
boltffi_cli/src/commands/: build.rs  check.rs  doctor.rs  generate.rs  init.rs  pack.rs
boltffi_cli/src/commands/generate/: generator.rs  header.rs  mod.rs
boltffi_cli/src/commands/pack/: all.rs  mod.rs  request.rs
boltffi_cli/src/pack/: android.rs  mod.rs  symbols.rs
boltffi_cli/src/pack/android/: link.rs  mod.rs
boltffi_cli/src/pack/apple/: mod.rs  spm.rs  xcframework.rs
boltffi_cli/src/pack/dart/: mod.rs
boltffi_cli/src/pack/java/: artifact.rs  link.rs  mod.rs  outputs.rs  plan.rs
boltffi_cli/src/pack/python/: build.rs  layout.rs  mod.rs  plan.rs  wheel.rs
boltffi_cli/src/pack/wasm/: mod.rs  npm.rs
boltffi_cli/src/toolchain/: android.rs  native_host.rs
boltffi_core/: Cargo.toml
boltffi_core/src/: async_callback.rs  callback.rs  handle.rs  lib.rs  passable.rs  rustfuture.rs  wasm.rs
boltffi_core/src/callback/: foreign.rs  handle.rs  mod.rs  ownership.rs  wasm.rs
boltffi_core/src/types/: buf.rs
boltffi_core/src/wire/: decode.rs  encode.rs
boltffi_core/tests/: wire_records.rs
boltffi_ffi_rules/: Cargo.toml
boltffi_ffi_rules/src/: lib.rs
boltffi_macros/: Cargo.toml
boltffi_macros/src/: callback_trait.rs  class.rs  data.rs  export.rs  lib.rs  params.rs  returns.rs  type_classification.rs  util.rs  wire_gen.rs
boltffi_macros/src/callbacks/: mod.rs
boltffi_macros/src/callbacks/trait_export/: local_handle.rs  mod.rs  native.rs  wasm.rs
boltffi_macros/src/data/expansion/: record_impl.rs
boltffi_macros/src/exports/: async_export.rs  callback_return.rs  function.rs  methods.rs
boltffi_macros/src/index/: callback_traits.rs  custom_types.rs  data_types.rs  mod.rs  path_resolver.rs  source_tree.rs
boltffi_macros/src/lowering/params/: mod.rs  transform.rs  value.rs
boltffi_macros/src/lowering/returns/: classify.rs  lower.rs  mod.rs  model.rs
boltffi_macros/src/lowering/transport/: mod.rs  type_shape.rs
boltffi_tests/: Cargo.toml
boltffi_tests/tests/: class_ffi.rs
boltffi_verify/: Cargo.toml
boltffi_verify/src/parse/: swift.rs
mobiFFI_bindgen/: Cargo.toml
mobiFFI_bindgen/src/: lib.rs
mobiFFI_bindgen/src/model/: mod.rs  stream.rs  types.rs
mobiFFI_bindgen/src/scan/: mod.rs
mobiFFI_bindgen/src/swift/: body.rs  mod.rs  templates.rs  types.rs
mobiFFI_bindgen/templates/cheader/: header.h
mobiFFI_bindgen/templates/swift/: callback_trait.txt  class.txt  function.txt  method_callback.txt  method_sync.txt  method_throwing.txt  preamble.txt  stream_async.txt  stream_batch.txt  stream_callback.txt
riff_cli/: Cargo.toml
riff_cli/src/: android.rs  build.rs  check.rs  config.rs  error.rs  main.rs  target.rs
riff_cli/src/commands/: build.rs  check.rs  doctor.rs  generate.rs  init.rs  mod.rs  pack.rs
riff_cli/src/pack/: android.rs  mod.rs  spm.rs  xcframework.rs
riff_core/: Cargo.toml  build.rs
riff_core/src/: callback.rs  custom_ffi.rs  handle.rs  lib.rs  pending.rs  ringbuffer.rs  rustfuture.rs  status.rs  subscription.rs
riff_core/src/types/: buf.rs  mod.rs  option.rs  slice.rs  string.rs
riff_core/src/wire/: decode.rs  encode.rs
riff_core/templates/: atomics.h
riff_core/tests/: wire_records.rs
(+394 files in other folders)
