[package]
name = "boltffi"
version = "0.1.0-rc.2"
edition = "2024"
authors = ["Ali A. Hilal <me@alihilal.com>"]
license = "MIT"
description = "High-performance FFI bindings generator for Rust. Up to 1000x faster than UniFFI, 450x faster than wasm-bindgen."
repository = "https://github.com/boltffi/boltffi"
homepage = "https://boltffi.dev"
documentation = "https://boltffi.dev/docs"
readme = "../README.md"
keywords = ["ffi", "swift", "kotlin", "wasm", "bindings"]
categories = ["development-tools::ffi", "api-bindings"]

[features]
default = ["uuid", "url"]
fast-alloc = ["boltffi_core/fast-alloc"]
uuid = ["boltffi_core/uuid"]
chrono = ["boltffi_core/chrono"]
url = ["boltffi_core/url"]

[dependencies]
boltffi_core = { version = "0.1", path = "../boltffi_core" }
boltffi_macros = { version = "0.1", path = "../boltffi_macros" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[lints]
workspace = true
