[package]
name = "boltffi_bindgen"
version = "0.1.0"
edition = "2024"
authors = ["Ali A. Hilal <me@alihilal.com>"]
license = "MIT"
description = "Code generation library for BoltFFI - generates Swift, Kotlin, and TypeScript bindings"
repository = "https://github.com/boltffi/boltffi"
keywords = ["ffi", "codegen", "swift", "kotlin", "typescript"]
categories = ["development-tools::ffi", "development-tools::build-utils"]

[dependencies]
boltffi_ffi_rules = { version = "0.1.0", path = "../boltffi_ffi_rules" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
heck = "0.5"
askama = "0.15"
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
walkdir = "2.4"
indexmap = "2.7"

[dev-dependencies]
insta = "1.46"

[lints]
workspace = true
