[package]
name = "boltffi_cli"
version = "0.1.0-rc.2"
edition = "2024"
authors = ["Ali A. Hilal <me@alihilal.com>"]
license = "MIT"
description = "CLI for BoltFFI - generate Swift, Kotlin, and WASM bindings from Rust"
repository = "https://github.com/boltffi/boltffi"
homepage = "https://boltffi.dev"
readme = "../README.md"
keywords = ["ffi", "cli", "codegen", "swift", "kotlin"]
categories = ["development-tools::ffi", "development-tools::build-utils", "command-line-utilities"]

[[bin]]
name = "boltffi"
path = "src/main.rs"

[dependencies]
boltffi_bindgen = { version = "0.1", path = "../boltffi_bindgen" }
boltffi_verify = { version = "0.1", path = "../boltffi_verify" }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
thiserror = "2.0"
which = "8.0"
sha2 = "0.10"
hex = "0.4"
zip = "7.2"
walkdir = "2.4"
serde_json = "1.0"

[lints]
workspace = true
