[package]
name = "boltffi_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for BoltFFI - generate Swift, Kotlin, and WASM bindings from Rust"
homepage = "https://boltffi.dev"
readme = "../README.md"
keywords = ["ffi", "cli", "codegen", "swift", "kotlin"]
categories = ["development-tools::ffi", "development-tools::build-utils", "command-line-utilities"]

[[bin]]
name = "boltffi"
path = "src/main.rs"

[dependencies]
boltffi_bindgen.workspace = true
boltffi_verify.workspace = true
clap = { version = "4.4", features = ["derive"] }
serde.workspace = true
toml = "1.0"
thiserror.workspace = true
which = "8.0"
sha2 = "0.10"
hex = "0.4"
zip = "8.1"
walkdir.workspace = true
serde_json.workspace = true
console = "0.16"
indicatif = "0.18"
object = "0.37"

[lints]
workspace = true
