[package]
name = "boltffi_ffi_rules"
version = "0.23.1"
edition = "2024"
authors = ["Ali A. Hilal <me@alihilal.com>"]
license = "MIT"
description = "FFI type rules and transport encoding for BoltFFI"
repository = "https://github.com/boltffi/boltffi"
keywords = ["ffi", "encoding", "transport", "bindings"]
categories = ["development-tools::ffi"]

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
rstest = "0.25"

[lints]
workspace = true
