[package]
name = "boltffi_tests"
version = "0.1.0-rc.2"
edition = "2024"
publish = false

[dependencies]
boltffi = { path = "../boltffi" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros"] }

[dev-dependencies]
boltffi_core = { path = "../boltffi_core" }

[lints]
workspace = true
