[package]
name = "boltffi_verify"
version = "0.1.0"
edition = "2024"
authors = ["Ali A. Hilal <me@alihilal.com>"]
license = "MIT"
description = "Static analysis and verification for BoltFFI generated bindings"
repository = "https://github.com/boltffi/boltffi"
keywords = ["ffi", "verification", "static-analysis", "bindings"]
categories = ["development-tools::ffi", "development-tools::testing"]

[dependencies]
thiserror = "2.0"
tree-sitter = "0.26"
tree-sitter-swift = "0.7"
