[package]
name = "riff_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "riff"
path = "src/main.rs"

[dependencies]
riff_bindgen = { path = "../riff_bindgen" }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "2.0"
which = "7.0"
sha2 = "0.10"
hex = "0.4"
zip = "2.2"
walkdir = "2.4"
